-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0
-
3
-
9223372036854775807
'ls -R' fails on encrypted directory when key is not available. Looking at the debug logs, it turns out ll_atomic_open() returns -126:
00000080:00000001:0.0:1600445147.245153:0:17885:0:(namei.c:1057:ll_atomic_open()) Process entered 00000080:00200000:0.0:1600445147.245154:0:17885:0:(namei.c:1062:ll_atomic_open()) VFS Op:name=subdir, dir=[0x20000041b:0x8:0x0](000000003df2bae3), file 00000000f2e92423, open_flags 18800, mode 0 opened 0 00000080:00000010:0.0:1600445147.245156:0:17885:0:(namei.c:1082:ll_atomic_open()) kmalloced '(it)': 72 at 00000000a652a8d8. 00000080:00000001:0.0:1600445147.245177:0:17885:0:(namei.c:1118:ll_atomic_open()) Process leaving via out_release (rc=18446744073709551490 : -126 : 0xffffffffffffff82) 00000080:00000010:0.0:1600445147.245180:0:17885:0:(namei.c:1206:ll_atomic_open()) kfreed 'it': 72 at 00000000a652a8d8. 00000080:00000001:0.0:1600445147.245180:0:17885:0:(namei.c:1208:ll_atomic_open()) Process leaving (rc=18446744073709551490 : -126 : ffffffffffffff82)
However, recursively listing directories should be possible without the key.